--- a/modal.css
+++ b/modal.css
@@ -98,7 +98,7 @@ font-family: Poppins;
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
-line-height: 24px;
+/* line-height: 24px; */
 color: #4C5059;
 }
 .form-control:-ms-input-placeholder { /* IE 10+ */
@@ -106,7 +106,7 @@ color: #4C5059;
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
-line-height: 24px;
+/* line-height: 24px; */
 color: #4C5059;
 }
 .form-control:-moz-placeholder { /* Firefox 18- */
@@ -114,7 +114,7 @@ color: #4C5059;
 font-style: normal;
 font-weight: normal;
 font-size: 16px;
-line-height: 24px;
+/* line-height: 24px; */
 
 color: #4C5059;
 }
