--- a/modal.css
+++ b/modal.css
@@ -143,7 +143,8 @@ border:1px solid #337AB7 !important;
   box-sizing: border-box;
   border-radius: 5px;
   height: auto;
-  max-height: 178px;
+  transition: all 0.5s ease-in-out;
+  /* max-height: 178px; */
   /* overflow-y: auto; */
 }
 
