--- a/modal.css
+++ b/modal.css
@@ -19,6 +19,8 @@
       }
 
       .modal-content{
+        padding-left: 25px;
+        padding-right: 25px;
       }
 
       button[disabled='disabled']{
